--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/RishiDhimmar/shade-backend#readme",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dxf-parser": "^1.1.2",
     "express": "^4.21.2"
   }
