--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dxf-parser": "^1.1.2",
+    "dxf-writer": "^1.18.4",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9"
