--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/RishiDhimmar/shade-backend#readme",
   "description": "",
   "dependencies": {
+    "@tarikjabiri/dxf": "^2.8.9",
     "cors": "^2.8.5",
     "dxf-parser": "^1.1.2",
     "dxf-writer": "^1.18.4",
