--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dxf-writer": "^1.18.4",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "to-js": "^0.0.6"
   }
 }
